# sipbar-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
app/: main.py
app/api/: main.py
app/api/routes/: hello.py  investment_movement.py  investment_record.py  predict.py  upload.py
app/core/: config.py  db.py
app/schemas/: investment_movement.py  investment_record.py
app/utils/: main.py  types.py
database/: env.py
database/seeders/: main.py
database/seeders/csv/: movements.csv  movements_rev.csv  records.csv
database/seeders/upload/: movements.csv  records.csv
database/versions/: 2f6c139c8a6e_create_investment_movements_table.py  a5643812216b_create_investment_records_table.py
notebooks/: eda.ipynb  forecast.ipynb
